--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     }
   },
   "require": {
-    "pragmarx/google2fa": "^8.0"
+    "pragmarx/google2fa": "^8.0",
+    "endroid/qr-code": "^3.9"
   }
 }
