Add Shopware standards

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ vendor
 composer.lock
 src/Resources/app/storefront/dist/storefront/js
 src/Resources/public/administration/js
+src/Resources/public/administration/css
+var/cache
