--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
     "require": {
         "pragmarx/google2fa": "^8.0",
         "bacon/bacon-qr-code": "^2.0"
+    },
+    "require-dev": {
+        "phpro/grumphp-shim": "^1.0"
     }
 }
