--- a/.github/workflows/create-zip.yml
+++ b/.github/workflows/create-zip.yml
@@ -11,6 +11,7 @@ jobs:
     CreateZip:
         if: startsWith(github.ref, 'refs/tags/')
         runs-on: ubuntu-latest
+        container: ghcr.io/friendsofshopware/platform-plugin-dev:v6.3.1
         steps:
             -   name: Get the version
                 id: get_version
@@ -22,7 +23,6 @@ jobs:
                     path: ${{ env.PLUGIN_NAME }}
 
             -   name: Build & create zip
-                uses: ghcr.io/friendsofshopware/platform-plugin-dev:v6.3.1
                 run: |
                     start-mysql
                     ln -s "$(pwd)" "/plugins/${{ env.PLUGIN_NAME }}"
