--- a/.github/workflows/create-zip.yml
+++ b/.github/workflows/create-zip.yml
@@ -4,12 +4,8 @@ on:
         tags:
             - '*'
 
-env:
-    PLUGIN_NAME: RuneLaenenTwoFactorAuth
-
 jobs:
     CreateZip:
-        if: startsWith(github.ref, 'refs/tags/')
         runs-on: ubuntu-latest
         container: ghcr.io/friendsofshopware/platform-plugin-dev:v6.3.1
         steps:
@@ -20,15 +16,17 @@ jobs:
             -   name: Checkout
                 uses: actions/checkout@v2.3.1
                 with:
-                    path: ${{ env.PLUGIN_NAME }}
+                    path: RuneLaenenTwoFactorAuth
 
             -   name: Build & create zip
                 run: |
+                    cp -r "./RuneLaenenTwoFactorAuth" "/plugins/RuneLaenenTwoFactorAuth"
+                    composer install -d "/plugins/RuneLaenenTwoFactorAuth" --no-ansi --no-dev --no-interaction --no-plugins --no-progress --no-scripts --no-suggest --optimize-autoloader --ignore-platform-reqs
                     start-mysql
-                    ln -s "$(pwd)" "/plugins/${{ env.PLUGIN_NAME }}"
-                    pack-plugin "${{ env.PLUGIN_NAME }}"
+                    pack-plugin "RuneLaenenTwoFactorAuth"
 
             -   name: Create Release
+                if: startsWith(github.ref, 'refs/tags/')
                 id: create_release
                 uses: actions/create-release@v1.0.0
                 env:
@@ -40,12 +38,13 @@ jobs:
                     prerelease: false
 
             -   name: Upload Release Asset
+                if: startsWith(github.ref, 'refs/tags/')
                 id: upload_release_asset
                 uses: actions/upload-release-asset@v1.0.2
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
                     upload_url: ${{ steps.create_release.outputs.upload_url }}
-                    asset_path: ${{ github.workspace }}/${{ env.PLUGIN_NAME }}-${{ steps.get_version.outputs.VERSION }}.zip
-                    asset_name: ${{ env.PLUGIN_NAME }}.zip
+                    asset_path: RuneLaenenTwoFactorAuth.zip
+                    asset_name: RuneLaenenTwoFactorAuth.zip
                     asset_content_type: application/zip
