fix: add support for Shopware 6.4.1

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     },
     "require": {
-        "shopware/core": "^6.3",
+        "shopware/core": "~6.4.1",
         "pragmarx/google2fa": "^8.0",
         "bacon/bacon-qr-code": "^2.0"
     },
