--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "bacon/bacon-qr-code": "^2.0"
     },
     "require-dev": {
-        "phpro/grumphp-shim": "^1.0"
+        "phpro/grumphp-shim": "^1.3",
+        "shopware/platform": "*",
+        "symplify/easy-coding-standard": "^9.4",
+        "kubawerlos/php-cs-fixer-custom-fixers": "^3.1"
     }
 }
