--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     },
     "require": {
-        "shopware/core": "~6.4.1",
+        "php": "^8.1",
+        "shopware/core": "^6.4.17",
         "pragmarx/google2fa": "^8.0",
         "bacon/bacon-qr-code": "^2.0"
     },
