--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Two Factor Authentication plugin",
     "type": "shopware-platform-plugin",
     "license": "MIT",
+    "version": "1.3.3",
     "autoload": {
         "psr-4": {
             "RuneLaenen\\TwoFactorAuth\\": "src/"
