--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         }
     },
     "require": {
-        "php": "^8.1",
-        "shopware/core": "^6.5",
+        "shopware/core": "~6.6",
         "pragmarx/google2fa": "^8.0",
         "bacon/bacon-qr-code": "^2.0"
     },
