--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Two Factor Authentication plugin",
     "type": "shopware-platform-plugin",
     "license": "MIT",
-    "version": "1.4.0",
+    "version": "6.0.0",
     "autoload": {
         "psr-4": {
             "RuneLaenen\\TwoFactorAuth\\": "src/"
@@ -15,6 +15,18 @@
         "label": {
             "de-DE": "Two Factor Authentication plugin",
             "en-GB": "Two Factor Authentication plugin"
+        },
+        "description": {
+            "de-DE": "Add extra security to your Shopware 6 shop by enabling Two Factor Authentication. Adds an extra prompt to admin- or customer-accounts in your Shopware 6 website.",
+            "en-GB": "Add extra security to your Shopware 6 shop by enabling Two Factor Authentication. Adds an extra prompt to admin- or customer-accounts in your Shopware 6 website."
+        },
+        "manufacturerLink": {
+            "de-DE": "https://kraftware.be/",
+            "en-GB": "https://kraftware.be/"
+        },
+        "supportLink": {
+            "de-DE": "https://github.com/runelaenen/shopware6-two-factor-auth/issues",
+            "en-GB": "https://github.com/runelaenen/shopware6-two-factor-auth/issues"
         }
     },
     "require": {
