--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ src/Resources/app/administration/.tmp
 src/Resources/public/administration/.vite
 src/Resources/public/administration/assets
 var/cache
+.DS_Store
